--- a/fasilitas-tambahan/dome-balerame.html
+++ b/fasilitas-tambahan/dome-balerame.html
@@ -3,7 +3,34 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="22nvIw5ULVAOuS8W-OkXXts3_HFQe72GC8K7yNELFNA" />
+
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Sewa gedung pertunjukan budaya, tari, dan acara formal di Sabilulangan, Soreang. Fasilitas lengkap dan lokasi strategis.">
+  <meta name="keywords"
+    content="sewa gedung tari, gedung budaya, sabilulangan, gedung pertunjukan soreang, sewa panggung acara seni, gedung seni budaya">
+  <meta name="author" content="Kampung Sabilulangan">
+  <meta name="robots" content="index, follow">
+
+  <!-- Social Media Meta Tags (Open Graph) -->
+  <meta property="og:title" content="Sewa Gedung Tari & Budaya - Sabilulangan Soreang">
+  <meta property="og:description"
+    content="Tempat ideal untuk pertunjukan budaya dan acara formal. Lokasi di pusat Soreang, fasilitas lengkap.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kampungsabilulangan.github.io/">
+  <meta property="og:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">
+  <!-- Ganti dengan gambarmu -->
+
+  <!-- Twitter Cards (optional) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sewa Gedung Tari & Budaya - Sabilulangan">
+  <meta name="twitter:description"
+    content="Gedung seni & budaya di Soreang. Fasilitas lengkap, cocok untuk pertunjukan dan acara resmi.">
+  <meta name="twitter:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">>
+
   <title>Dome Balerame - Gedong Budaya Sabilulungan</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
