hotfix: meta tag

--- a/fasilitas-tambahan/taman-lembayung-senja.html
+++ b/fasilitas-tambahan/taman-lembayung-senja.html
@@ -29,7 +29,7 @@
   <meta name="twitter:title" content="Sewa Gedung Tari & Budaya - Sabilulangan">
   <meta name="twitter:description"
     content="Gedung seni & budaya di Soreang. Fasilitas lengkap, cocok untuk pertunjukan dan acara resmi.">
-  <meta name="twitter:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">>
+  <meta name="twitter:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">
 
   <title>Taman Lembayung Senja - Gedong Budaya Sabilulungan</title>
   <meta name="description" content="">
