--- a/fasilitas-tambahan/3d-art-gallery.html
+++ b/fasilitas-tambahan/3d-art-gallery.html
@@ -9,31 +9,30 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Sewa gedung pertunjukan budaya, tari, dan acara formal di Sabilulangan, Soreang. Fasilitas lengkap dan lokasi strategis.">
+    content="Sewa gedung pertunjukan budaya, tari, dan acara formal di Sabilulungan, Soreang. Fasilitas lengkap dan lokasi strategis.">
   <meta name="keywords"
-    content="sewa gedung tari, gedung budaya, sabilulangan, gedung pertunjukan soreang, sewa panggung acara seni, gedung seni budaya">
-  <meta name="author" content="Kampung Sabilulangan">
+    content="sewa gedung tari, gedung budaya, sabilululangan, gedung pertunjukan soreang, sewa panggung acara seni, gedung seni budaya, gedong budaya sabilulungan , kampung sabilulungan, gbs, sabilulungan">
+  <meta name="author" content="Kampung Sabilulungan">
   <meta name="robots" content="index, follow">
 
   <!-- Social Media Meta Tags (Open Graph) -->
-  <meta property="og:title" content="Sewa Gedung Tari & Budaya - Sabilulangan Soreang">
+  <meta property="og:title" content="Sewa Gedung Tari & Budaya - Sabilulungan Soreang">
   <meta property="og:description"
     content="Tempat ideal untuk pertunjukan budaya dan acara formal. Lokasi di pusat Soreang, fasilitas lengkap.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://kampungsabilulangan.github.io/">
-  <meta property="og:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">
+  <meta property="og:url" content="https://kampungsabilulungan.github.io/">
+  <meta property="og:image" content="https://kampungsabilulungan.github.io/assets/img/addon/logo.png">
   <!-- Ganti dengan gambarmu -->
 
   <!-- Twitter Cards (optional) -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Sewa Gedung Tari & Budaya - Sabilulangan">
+  <meta name="twitter:title" content="Sewa Gedung Tari & Budaya - Sabilulungan">
   <meta name="twitter:description"
     content="Gedung seni & budaya di Soreang. Fasilitas lengkap, cocok untuk pertunjukan dan acara resmi.">
-  <meta name="twitter:image" content="https://kampungsabilulangan.github.io/assets/img/addon/logo.png">
+  <meta name="twitter:image" content="https://kampungsabilulungan.github.io/assets/img/addon/logo.png">
 
   <title>3d Art Gallery - Gedong Budaya Sabilulungan</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.ico" rel="icon">
