--- a/fasilitas-tambahan/dome-balerame.html
+++ b/fasilitas-tambahan/dome-balerame.html
@@ -153,7 +153,7 @@
             <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Area luas dengan atap dome setengah terbuka</span></li>
-              <li><i class="bi bi-dot"></i><span>Daya tampung 10.000 orang</span></li>
+              <li><i class="bi bi-dot"></i><span>Daya tampung 5.000+ orang</span></li>
               <li><i class="bi bi-dot"></i><span>Cocok untuk booth, panggung, dan kegiatan interaktif</span></li>
               <li><i class="bi bi-dot"></i><span>Sirkulasi udara alami dan pencahayaan yang baik</span></li>
               <li><i class="bi bi-dot"></i><span>Fleksibel untuk dekorasi dan tata ruang sesuai kebutuhan acara</span></li>
