--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/panggung-utama" class="stretched-link">Panggung Utama</a></h4>
-                <p class="description">fasilitas inti yang dirancang untuk
+                <p class="description">Fasilitas inti yang dirancang untuk
                   menampilkan pertunjukan seni</p>
               </div>
             </div>
@@ -240,7 +240,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-vip" class="stretched-link">Ruang VIP</a></h4>
-                <p class="description">menghadirkan kenyamanan dan fasilitas lengkap
+                <p class="description">Menghadirkan kenyamanan dan fasilitas lengkap
                   untuk berbagai aktivitas formal dan komunitas.</p>
               </div>
             </div>
@@ -256,7 +256,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-pertemuan" class="stretched-link">Ruang Pertemuan</a></h4>
-                <p class="description">memberikan pengalaman terbaik bagi
+                <p class="description">Memberikan pengalaman terbaik bagi
                   tamu kehormatan, pembicara, atau tokoh penting
                   dalam sebuah acara</p>
               </div>
@@ -273,7 +273,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/selasar" class="stretched-link">Selasar</a></h4>
-                <p class="description">area semi-outdoor yang luas dan fleksibel</p>
+                <p class="description">Area semi-outdoor yang luas dan fleksibel</p>
               </div>
             </div>
           </div>
@@ -288,7 +288,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas/ruang-rias" class="stretched-link">Ruang Rias</a></h4>
-                <p class="description">disediakan khusus untuk menunjang kenyamanan
+                <p class="description">Disediakan khusus untuk menunjang kenyamanan
                   performer dan talent sebelum tampil</p>
               </div>
             </div>
@@ -410,7 +410,7 @@
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas-tambahan/dome-balerame" class="stretched-link">Dome Balerame</a>
                 </h4>
-                <p class="description">area
+                <p class="description">Area
                   semi-outdoor
                   berkapasitas besar yang berada dalam kompleks
                   Gedong Budaya Sabilulungan</p>
@@ -434,7 +434,7 @@
       <!-- Section Title -->
       <div class="container section-title">
         <h2 class="green-text">Galeri GBS</h2>
-        <p>Dokumentasi: Merangkai Momen, Merawat Budaya</p>
+        <p>Yuk, lihat acara terbaik dan fasilitas kami disin</p>
       </div><!-- End Section Title -->
 
       <div class="container">
