hotfix: taman kaulinan word

--- a/fasilitas-tambahan/taman-kaulinan-barudak.html
+++ b/fasilitas-tambahan/taman-kaulinan-barudak.html
@@ -31,7 +31,7 @@
     content="Gedung seni & budaya di Soreang. Fasilitas lengkap, cocok untuk pertunjukan dan acara resmi.">
   <meta name="twitter:image" content="https://kampungsabilulungan.github.io/assets/img/addon/logo.png">
 
-  <title>Taman Kaulinan Barudak - Gedong Budaya Sabilulungan</title>
+  <title>Taman Kaulinan Budak Lembur  - Gedong Budaya Sabilulungan</title>
 
 
   <!-- Favicons -->
@@ -105,7 +105,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 >Taman Kaulinan Barudak</h1>
+            <h1 >Taman Kaulinan Budak Lembur </h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/3d-art-gallery">
@@ -127,7 +127,7 @@
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <p>
-              Taman Kaulinan Barudak menghadirkan berbagai macam permainan tradisional yang menarik dan edukatif. Di
+              Taman Kaulinan Budak Lembur  menghadirkan berbagai macam permainan tradisional yang menarik dan edukatif. Di
               taman ini, pengunjung, terutama anak-anak, dapat mencoba permainan tradisional seperti sondah, enggrang,
               dan masih banyak lagi.
             </p>
