hotfix: benerin typo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               </div>
               <div class="mt-4 mt-lg-0">
                 <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak" class="stretched-link">Taman
-                    Kaulinan Barudak</a></h4>
+                    Kaulinan Budak Lembur</a></h4>
                 <p class="description">Area bermain outdoor bernuansa tradisional Sunda yang aman dan edukatif untuk
                   anak-anak.</p>
               </div>
