add: seo for index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="google-site-verification" content="22nvIw5ULVAOuS8W-OkXXts3_HFQe72GC8K7yNELFNA" />
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Sewa gedung pertunjukan budaya, tari, dan acara formal di Sabilulungan, Soreang. Fasilitas lengkap dan lokasi strategis.">
+    content="Sewa gedung pertunjukan budaya, tari, dan acara formal dan non-formal di Kampung Sabilulungan, Soreang. Fasilitas lengkap dan lokasi strategis.">
   <meta name="keywords"
-    content="sewa gedung tari, gedung budaya, sabilululangan, gedung pertunjukan soreang, sewa panggung acara seni, gedung seni budaya, gedong budaya sabilulungan , kampung sabilulungan, gbs, sabilulungan">
+    content="sewa gedung budaya, sewa gedung pertunjukan, sewa gedung seni, sewa gedung tari, Gedong Budaya Sabilulungan, kampung sabilulungan, GBS Soreang, sewa dome Balerame, gedung seni budaya Soreang, tempat acara seni di Bandung, gedung seni dan budaya Soreang,tarif, Kabupaten Bandunng">
   <meta name="author" content="Kampung Sabilulungan">
   <meta name="robots" content="index, follow">
 
