--- a/fasilitas/ruang-pertemuan.html
+++ b/fasilitas/ruang-pertemuan.html
@@ -209,6 +209,19 @@
 
   </footer>
 
+   <div class="sharelinks">
+    <a href="https://api.whatsapp.com/send?text=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn wa" title="Bagikan ke WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn fb" title="Bagikan ke Facebook"><i class="bi bi-facebook"></i></a>
+    <a href="https://x.com/intent/tweet?url=https://kampungsabilulungan.github.io&text=Kunjungi%20Gedung%20Sabilulungan!"
+      target="_blank" class="share-btn x" title="Bagikan ke X / Twitter"><i class="bi bi-twitter"></i></a>
+    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn in" title="Bagikan ke LinkedIn"><i class="bi bi-linkedin"></i></a>
+    <a href="https://t.me/share/url?url=https://kampungsabilulungan.github.io&text=Kunjungi%20Gedung%20Sabilulungan!"
+      target="_blank" class="share-btn tg" title="Bagikan ke Telegram"><i class="bi bi-telegram"></i></a>
+  </div>
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
