--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <!-- Section Title -->
       <div class="container section-title">
         <h2 class="green-text">Galeri GBS</h2>
-        <p>Yuk, lihat acara terbaik dan fasilitas kami disin</p>
+        <p>Yuk, lihat acara terbaik dan fasilitas kami disini!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -805,7 +805,7 @@
                 <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-instagram"></i>
                   <h3>Instagram</h3>
-                  <p>@gedongsabilulungan</p>
+                  <a href="https://www.instagram.com/gedongsabilulungan" target="_blank">@gedongsabilulungan</a>
                 </div>
               </div><!-- End Info Item -->
 
@@ -813,7 +813,8 @@
                 <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-envelope"></i>
                   <h3>Email</h3>
-                  <small>GedongBudayaSabilulungan<br>@gmail.com</small>
+                  <a
+                    href="mailto:gedongbudayasabilulungan@gmail.com"><small>GedongBudayaSabilulungan<br>@gmail.com</small></a>
                 </div>
               </div><!-- End Info Item -->
 
@@ -821,7 +822,8 @@
                 <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-tiktok"></i>
                   <h3>Tiktok</h3>
-                  <p>@Gedongbudayasabilulungan</p>
+                  <a href="https://www.tiktok.com/@gedongbudayasabilulungan"
+                    target="_blank">@gedongbudaya<br>sabilulungan</a>
                 </div>
               </div><!-- End Info Item -->
 
@@ -829,8 +831,8 @@
                 <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-telephone"></i>
                   <h3>Telepon</h3>
-                  <p>+62 822 1851 4666</p>
-                  <small>Tersedia untuk panggilan & WhatsApp</small>
+                  <a href="tel:+6282218514666">+62 822 1851 4666</a>
+                  <a href="https://wa.me/6282218514666"><small>Tersedia untuk panggilan & WhatsApp</small></a>
                 </div>
               </div><!-- End Info Item -->
 
@@ -838,7 +840,8 @@
                 <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-youtube"></i>
                   <h3>YouTube</h3>
-                  <p>Gedong Budaya Sabilulungan</p>
+                  <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b" target="_blank">Gedong Budaya
+                    Sabilulungan</a>
                 </div>
               </div><!-- End Info Item -->
 
@@ -861,7 +864,7 @@
                 <div class="info-item d-flex justify-content-center align-items-center flex-column">
                   <i class="bi bi-map text-success"></i>
                   <h6 class="my-2">5 Menit Dari</h6>
-                  <p>Gerbang Tol Soroja</p>
+                  <p class="text-center">Gerbang Tol Soroja</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -949,9 +952,23 @@
 
   </footer>
 
+  <div class="sharelinks">
+    <a href="https://api.whatsapp.com/send?text=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn wa" title="Bagikan ke WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn fb" title="Bagikan ke Facebook"><i class="bi bi-facebook"></i></a>
+    <a href="https://x.com/intent/tweet?url=https://kampungsabilulungan.github.io&text=Kunjungi%20Gedung%20Sabilulungan!"
+      target="_blank" class="share-btn x" title="Bagikan ke X / Twitter"><i class="bi bi-twitter"></i></a>
+    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://kampungsabilulungan.github.io" target="_blank"
+      class="share-btn in" title="Bagikan ke LinkedIn"><i class="bi bi-linkedin"></i></a>
+    <a href="https://t.me/share/url?url=https://kampungsabilulungan.github.io&text=Kunjungi%20Gedung%20Sabilulungan!"
+      target="_blank" class="share-btn tg" title="Bagikan ke Telegram"><i class="bi bi-telegram"></i></a>
+  </div>
+
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
