--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h2 class="mb-3">Gedong Budaya Sabilulungan</h2>
             <p class="nunito fw-bold">Gedong Budaya Sabilulungan (GBS) merupakan fasilitas publik yang dibangun sebagai
               pusat kegiatan seni dan
-              budaya yang mengusung arsitektur tradisional Sunda berpadu sentuhan modern. Tidak hanya menjadi ruang eks
+              budaya yang mengusung arsitektur tradisional Sunda berpadu sentuhan modern.
             </p>
             <p class="nunito fw-bold">
               Tidak hanya menjadi ruang ekspresi budaya, GBS juga telah berkembang menjadi tempat multifungsi untuk
@@ -568,7 +568,7 @@
                 <i class="bi bi-star"></i>
               </div>
 
-              <h4><sup>Rp.</sup>22,5 JT<span>,-*</span></h4>
+              <h4><sup>Rp.</sup>22,5 JT</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Panggung Utama</span></li>
                 <li><i class="bi bi-check"></i> <span>LED Screen P6 (10mX5m)</span></li>
@@ -593,7 +593,7 @@
               <div class="icon" style="background-color: #d3d3d3;">
                 <i class="bi bi-star"></i>
               </div>
-              <h4><sup>Rp.</sup>24,25 JT<span>,-*</span></h4>
+              <h4><sup>Rp.</sup>24,25 JT</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Panggung Utama</span></li>
                 <li><i class="bi bi-check"></i> <span>Penerangan Umum</span></li>
@@ -619,7 +619,7 @@
               <div class="icon" style="background-color: #f2c94c;">
                 <i class="bi bi-star"></i>
               </div>
-              <h4><sup>Rp.</sup>27 JT<span>,-*</span></h4>
+              <h4><sup>Rp.</sup>27 JT</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Panggung Utama</span></li>
                 <li><i class="bi bi-check"></i> <span>Ruang VIP</span></li>
@@ -644,7 +644,7 @@
               <div class="icon" style="background-color: #000000;">
                 <i class="bi bi-gem"></i>
               </div>
-              <h4><sup>Rp.</sup>35 JT<span>,-*</span></h4>
+              <h4><sup>Rp.</sup>35 JT</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Panggung Utama</span></li>
                 <li><i class="bi bi-check"></i> <span>Ruang Pertemuan</span></li>
